Change auth flow

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ DB_USERNAME=username
 DB_PASSWORD=password
 DB_DATABASE=database_name
 DB_HOST=server
-SECRET_KEY=strong_random_bytes
+DEBUG=starter:server
+JWT_SECRET_KEY=strong_random_bytes
+JWT_EXPIRES_IN=604800
