--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "private": true,
   "scripts": {
     "start": "per-env",
-    "start:development": "dotenv nodemon ./bin/www",
+    "start:development": "nodemon --ignore client/ -r dotenv/config ./bin/www",
     "start:production": "./bin/www",
+    "db:create": "dotenv sequelize db:create",
+    "db:migrate": "dotenv sequelize db:migrate",
+    "db:seed:all": "dotenv sequelize db:seed:all",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
+    "debug": "^4.1.1",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
-    "express-bearer-token": "^2.4.0",
     "express-validator": "^6.4.1",
     "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "per-env": "^1.0.2",
     "pg": "^8.0.3",
@@ -26,9 +31,8 @@
     "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3",
-    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "dotenv-cli": "^3.1.0"
+    "dotenv-cli": "^3.1.0",
+    "nodemon": "^2.0.3"
   }
 }
